--- a/package.json
+++ b/package.json
@@ -61,8 +61,10 @@
   "dependencies": {
     "@babel/preset-react": "^7.16.7",
     "@bigbinary/neeto-icons": "^1.8.17",
-    "@bigbinary/neetoui": "^3.2.29",
+    "@bigbinary/neetoui": "^4.0.3",
+    "@emotion/is-prop-valid": "^1.2.0",
     "@rails/webpacker": "5.4.3",
+    "antd": "^4.23.1",
     "axios": "^0.26.1",
     "babel-plugin-js-logger": "^1.0.17",
     "babel-plugin-transform-react-remove-prop-types": "^0.4.24",
@@ -70,6 +72,7 @@
     "classnames": "^2.3.1",
     "core-js": "3.21.1",
     "formik": "^2.2.9",
+    "ignore-loader": "^0.1.2",
     "js-logger": "^1.6.1",
     "prop-types": "^15.8.1",
     "ramda": "^0.28.0",
